--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,9 +4,8 @@ site_url: https://ColoMAX.github.io/fish_feeder
 
 nav:
   - index.md
-  - getting-started.md
+  - "getting-started.md"
   - "overview.md"
-  - "FISH_FEEDER": getting-started.md
 
 theme:
   name: readthedocs
