--- a/src/fish_feeder.yaml
+++ b/src/fish_feeder.yaml
@@ -1,5 +1,12 @@
 esphome:
   name: fishfeeder
+  on_boot:
+      priority: 800
+      then:
+        - lambda: |-
+            id(last_update_str).publish_state(strtok(ctime(&id(last_timestamp)), "\n"));
+preferences:
+  flash_write_interval: 1min
 
 esp8266:
   board: d1_mini
@@ -28,6 +35,11 @@ globals:
     type: long long
     restore_value: true
     initial_value: "0"
+
+light:
+  - platform: binary
+    name: Fish tank light
+    output: light_relay
 
 select:
   - platform: template
@@ -155,7 +167,14 @@ button:
       - delay: 500ms
       - cover.close: fishtank_lid
     id: feeder_trigger
-
+  - platform: template
+    name: Reset last feeding time
+    on_press:
+      - then:
+         - lambda: |-
+            id(last_timestamp)=1705273200LL;
+            id(last_update_str).publish_state(strtok(ctime(&id(last_timestamp)), "\n"));
+    id: last_time_btn
 switch:
   - platform: template
     id: feed_motor
@@ -176,10 +195,24 @@ switch:
   - platform: gpio
     pin: GPIO14
     name: vibration motor
+    internal: true
     id: vib_motor
     on_turn_on:
       - delay: 100ms
       - switch.turn_off: vib_motor
+
+  - platform: restart
+    name: "Restart"
+    restore_mode: ALWAYS_OFF
+
+  - platform: safe_mode
+    name: "Restart (Safe Mode)"
+    restore_mode: ALWAYS_OFF
+
+  - platform: factory_reset
+    name: Restart with Factory Default Settings
+    id: factory_reset_switch
+    restore_mode: ALWAYS_OFF
 
 output:
   - platform: esp8266_pwm
@@ -193,10 +226,7 @@ output:
   - id: light_relay
     platform: gpio
     pin: GPIO13
-light:
-  - platform: binary
-    name: Fish tank light
-    output: light_relay
+
 
 servo:
   - id: screw_servo
@@ -245,8 +275,31 @@ binary_sensor:
         - switch.turn_on: vib_motor
         - delay: 500ms
         - cover.close: fishtank_lid
+    on_multi_click:
+      - timing: #  3x (short, long)
+          - ON for at most 1s
+          - OFF for at most 1s
+          - ON for 0.5s to 1s
+          - OFF for at least 0.2s
+          - ON for at most 1s
+          - OFF for at most 1s
+          - ON for 0.5s to 1s
+          - OFF for at least 0.2s
+          - ON for at most 1s
+          - OFF for at most 1s
+          - ON for 0.5s to 1s
+          - OFF for at least 0.2s
+        then:
+          - logger.log: "DEVICE IS ABOUT TO BE FACTORY RESET in 10 sec"
+          - delay: 10s
+          - switch.turn_on: vib_motor
+          - delay: 500ms
+          - switch.turn_on: factory_reset_switch
     internal: true
-
+text_sensor:
+  platform: template
+  name: Last time fed (automatically)
+  id: last_update_str
 time:
   - platform: sntp
     id: sntptime
@@ -259,3 +312,5 @@ time:
         then:
           - lambda: |-
               #include "../../../../timing.cpp"
+improv_serial:
+  next_url: https://colomax.github.io/fish_feeder/
