--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,7 +6,8 @@ on:
     paths:
       - 'docs/**'
   workflow_dispatch: 
-
+permissions:
+  contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
