--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,17 +5,15 @@ on:
       - main
     paths:
       - 'docs/**'
+  workflow_dispatch: 
 permissions:
   contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Configure Git Credentials
-        run: |
-          git config user.name github-actions[bot]
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v3
         with:
           python-version: 3.x
       # - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
@@ -26,5 +24,5 @@ jobs:
         #   restore-keys: |
         #     mkdocs-
       - run: pip install mkdocs mkdocs-same-dir
-
+      - run: git config user.name 'github-actions[bot]' && git config user.email 'github-actions[bot]@users.noreply.github.com'
       - run: mkdocs gh-deploy --force
