--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,24 +5,24 @@ on:
       - master
     paths:
       - 'docs/**'
-  workflow_dispatch: 
+  workflow_dispatch:
 permissions:
   contents: write
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-python@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
         with:
           python-version: 3.x
-      # - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      # - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       # - uses: actions/cache@v3
         # with:
         #   key: mkdocs-${{ env.cache_id }}
         #   path: .cache
         #   restore-keys: |
         #     mkdocs-
-      - run: pip install mkdocs mkdocs-same-dir
+      - run: pip install mkdocs
       - run: git config user.name 'github-actions[bot]' && git config user.email 'github-actions[bot]@users.noreply.github.com'
       - run: mkdocs gh-deploy --force
