--- a/src/fish_feeder.yaml
+++ b/src/fish_feeder.yaml
@@ -354,4 +354,5 @@ time:
           - lambda: |-
               #include "../../../../timing.cpp"
 improv_serial:
-  next_url: https://colomax.github.io/fish_feeder/
+  # next_url: https://colomax.github.io/fish_feeder/getting-started/#configuration
+  next_url: http://{{ip_address}}:80
